# FAirlens-Platform

./: .env.example  .gitignore  Fairlens Build - AI Bias Detection.md  Makefile  README.md  run_local.sh
benchmarks/: __init__.py  api_endpoint.py
compliance/: __init__.py  generator.py  signer.py
debiaser/: __init__.py  augment.py  ctgan_trainer.py  provenance.py
demo_output/: audit_report.html  audit_report.json  compliance_eu_ai_act.sha256
docs/: ARCHITECTURE.md  BUILD_REPORT.md  DEMO_SCRIPT.md  IMPACT_METRICS.md  PROBLEM_STATEMENT.md  RECOMMENDATIONS.md  SUBMISSION_SUMMARY.md  walkthrough.md
education/: mkdocs.yml  skills_boost_quest.yaml
explainability/: __init__.py  shap_runner.py
gate/: Dockerfile  gate.py  requirements.txt
infra/: main.tf  outputs.tf  variables.tf
local_data/: fairlens.db
monitor/: metrics_writer.py  pipeline.py
remediation/: schema.py
scanner/: pipeline.py  schema.py
scripts/: challenge_demo.py  demo.py  demo_gcp.sh  demo_reveal.py  local_db.py  seed_demo_data.py  seed_local_db.py  setup-gcp.sh  sos_hub.py  verify_setup.py
sdk/: pyproject.toml
sdk/fairlens/: __init__.py  audit.py  debias.py  monitor.py  report.py
sdk/fairlens/connectors/: __init__.py  sklearn.py  vertex.py
sdk/fairlens/metrics/: __init__.py  average_odds.py  calibration.py  demographic_parity.py  disparate_impact.py  equal_opportunity.py  equalized_odds.py  statistical_parity.py  theil.py
sdk/tests/: test_metrics.py
stitch_assets/: compliance_reports_v1.html  compliance_reports_v2.html  dashboard_v1.html  dashboard_v2.html  incident_log_v1.html  incident_log_v2.html  login_v1.html  login_v2.html  model_detail_v1.html  model_detail_v2.html  (+2 more)
(+84 files in other folders)
